# Monocular-Lidar-Odometry-Playground

./: CMakeLists.txt  README.md  test_lidar.cpp  test_main.cpp
data/: frame_1.pcd  frame_1.ply~  frame_2.pcd  frame_2.ply~
include/: Backend.h  image.h  lidar.h  lidarPM.h
src/: Backend.cpp  CMakeLists.txt~  image.cpp  lidar.cpp  lidarPM.cpp
src/Backend/: Backend.cpp  Backend.cpp~  Backend.h  Backend.h~
src/Frontend/: image.cpp  image.h  lidar.cpp  lidar.h  matching
utils/: alignLidar.m  data_asso.py  data_asso.py~  drawCamera.m  drawFrame.m  pickFile.m  txt2ply.cpp  txt2ply.m  txt2ply.m~  visualizeSfm.m
